2010-03-02  Andy Buckley  <andy@insectnation.org>

	* Tagging for 1.2.0 release... at last!

2010-03-01  Andy Buckley  <andy@insectnation.org>

	* Updates to manual, manual generation scripts, analysis info etc.

	* Add HepData URL to metadata print-out with rivet --show-analysis

	* Fix average Et plot in UA1 analysis to only apply to the tracker
	acceptance (but to include neutral particle contributions,
	i.e. the region of the calorimeter in the tracker acceptance).

	* Use Et rather than pT in filling the scalar Et measure in
	TotalVisibleMomentum.

	* Fixes to UA1 normalisation (which is rather funny in the paper).

2010-02-26  Andy Buckley  <andy@insectnation.org>

	* Update WFinder to not place cuts and other restrictions on the
	neutrino.

2010-02-11  Andy Buckley  <andy@insectnation.org>

	* Change analysis loader behaviour to use ONLY RIVET_ANALYSIS_PATH
	locations if set, otherwise use ONLY the standard Rivet analysis
	install path. Should only impact users of personal plugin
	analyses, who should now explicitly set RIVET_ANALYSIS_PATH to
	load their analysis... and who can now create personal versions of
	standard analyses without getting an error message about duplicate
	loading.

2010-01-15  Andy Buckley  <andy@insectnation.org>

	* Add tests for "stable" heavy flavour hadrons in jets (rather
	than just testing for c/b hadrons in the ancestor lists of stable
	jet constituents)

2009-12-23  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New option "RatioPlotMode=deviation" in make-plots.

2009-12-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New option "MainPlot" in make-plots. For people who only want
	the ratio plot and nothing else.

	* New option "ConnectGaps" in make-plots. Set to 1 if you
	want to connect gaps in histograms with a line when ErrorBars=0.
	Works both in PLOT and in HISTOGRAM sections.

	* Eliminated global variables for coordinates in make-plots and
	enabled multithreading.

2009-12-14  Andy Buckley  <andy@insectnation.org>
