@@ -62,6 +62,7 @@ nobase_pkginclude_HEADERS +=   \
   Projections/LeadingParticlesFinalState.hh \
   Projections/LossyFinalState.hh \
   Projections/MergedFinalState.hh \
+  Projections/MissingMomentum.hh \
   Projections/Multiplicity.hh   \
   Projections/NeutralFinalState.hh \
   Projections/ParisiTensor.hh   \
